--- a/caseStudyWP/index.Rmd
+++ b/caseStudyWP/index.Rmd
@@ -70,11 +70,7 @@ link-citations: true
 bibliography: bib/refs.bib
 # Any extra LaTeX code for the header:
 header-includes:
-  - \usepackage{amsmath}
-  - \usepackage{graphics}
-  - \usepackage{tcolorbox}
-  - \usepackage{tikz}
-  - \usetikzlibrary{shapes, arrows.meta, positioning}
+  - \usepackage{amsmath} \usepackage{graphics} \usepackage{tcolorbox} \usepackage{afterpage} \usepackage{needspace} \usepackage{tikz} \usetikzlibrary{shapes, arrows.meta, positioning}
 
 ---
 
