--- a/guidelinesWP/05-chap5.Rmd
+++ b/guidelinesWP/05-chap5.Rmd
@@ -370,7 +370,7 @@ Projection LRPs may be inappropriate when:
 
 - Current CU-level assessments are not available. Aggregate-abundance LRPs are intended to supplement proportional LRPs and not replace them. There may be risk of loss of CU-level biodiversity when relying on projection LRPs alone due to unforeseen processes (e.g., infrequent extreme events) not captured in the projection model that are reflected in current CU statuses. 
 -->
-Furthermore, projection LRPs may be more appropriate when pairwise correlations in spawner abundances among CUs are positive and strong, but this is not a requirement. It is possible to estimate projection LRPs for an SMU with component CUs that vary independently. However, when correlations between CUs are low, the aggregate abundance LRP will be high because there is a higher probability of any one CU having Red status. In these cases, proportional LRPs and harvest control rules that manage CUs independently may be more appropriate. <!--CH omit? : When used to inform operational control points, very high aggregate abundance LRPs may conflict with harvest or other socioeconomic objectives.--> We also note that 
+Furthermore, projection LRPs may be more appropriate when pairwise correlations in spawner abundances among CUs are positive and strong, but this is not a requirement. It is possible to estimate projection LRPs for an SMU with component CUs that vary independently. However, when correlations between CUs are low, the aggregate abundance LRP will be high because there is a higher probability of any one CU having Red status. In these cases, proportional LRPs and harvest control rules that manage CUs independently may be more appropriate. <!--CH omit? : When used to inform operational control points, very high aggregate abundance LRPs may conflict with harvest or other socioeconomic objectives.-->
 
 ### Step 9: Apply aggregate abundance LRPs to derive SMU-level status and compare to status against proportional LRPs
 
